Progress on slides

--- a/include/preamble.tex
+++ b/include/preamble.tex
@@ -23,6 +23,7 @@
 % Diagrams
 \usepackage{tikz}
 \usetikzlibrary{positioning, matrix, fit, trees, automata, calc}
+\usepackage{tkz-graph}
 
 % ---------------------------
 % Random number generation
