--- a/index.tex
+++ b/index.tex
@@ -25,4 +25,15 @@
 \subfile{sections/01-organization.tex}
 \subfile{sections/02-tools.tex}
 
+\begin{frame}{Thanks!}
+  Thanks for listening! \\[2em]
+
+  \textbf{Slides here:} \\
+  {\scriptsize \url{https://github.com/Dophin2009/intro-compilers/releases/download/latest/index.pdf}}
+  
+  \textbf{Source code here:} \\
+  {\scriptsize \url{https://github.com/Dophin2009/intro-compilers}}
+    
+\end{frame}
+
 \end{document}
